profilelist1exp/unpackaged/objects/ideaLightRod__c.object
<CustomObject>
    <description>For controlling Lightening Rod content on the right had sidebar.  Each Business Segment has their own lightening rod record that they can update as appropriate.</description>
    <fields>
        <fullName>Community_ID__c</fullName>
        <externalId>true</externalId>
        <label>Community ID</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DisplayText__c</fullName>
        <label>DisplayText</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LE</fullName>
                </value>
                <value>
                    <fullName>SMB</fullName>
                </value>
                <value>
                    <fullName>Public</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TextURL__c</fullName>
        <label>TextURL</label>
        <type>Url</type>
    </fields>
    <label>ideaLightRod</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ideaLightRod</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ideaLightRods</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>